--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -11,7 +11,12 @@
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a class="nav-content" href="index.html">About</a> 
+        <a class="nav-content" href="new-properties.html">New Properties</a>
+        <a class="nav-content" href="real-estate-listings.html">Listings</a> 
+        <a class="nav-content" href="market-report.html">Market Report</a> 
+        <a class="nav-content" href="contact.html">Contact</a> 
+        <a class="nav-content" href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
@@ -25,8 +30,8 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
 
-    <section id="details">
-      <div>
+    <section class="footer">
+      <div id="details">
         <h3>Contact</h3>
         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -35,7 +40,7 @@
         </p>
       </div>
       
-      <div>
+      <div id="details">
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
@@ -44,7 +49,7 @@
         </p>
       </div>
 
-      <div>
+       <div id="details">
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
@@ -53,7 +58,7 @@
         </p>
       </div>
 
-      <div>
+       <div id="details">
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
